fixed Accesibility issues

--- a/lms/templates/instructor/instructor_dashboard_2/data_download_2.html
+++ b/lms/templates/instructor/instructor_dashboard_2/data_download_2.html
@@ -54,7 +54,7 @@ from openedx.core.djangolib.markup import HTML, Text
             <button type="button" class="btn-link problem-report" data-section="problem">Problem Report</button>
         </li>
         <li class="nav-item">
-            <button type="button" class="btn-link certificates" data-section="certificates">Certificates</button>
+            <button type="button" class="btn-link certificates" data-section="certificate">Certificates</button>
         </li>
         %if settings.FEATURES.get('ALLOW_COURSE_STAFF_GRADE_DOWNLOADS') or section_data['access']['admin']:
         <li class="nav-item">
@@ -194,8 +194,8 @@ from openedx.core.djangolib.markup import HTML, Text
         </div>
     </section>
     %endif
-    <section id="certificates" class="idash-section tab-data" aria-labelledby="header-certificates">
-        <h6 class="mb-15" id="header-certificates">
+    <section id="certificate" class="idash-section tab-data" aria-labelledby="header-cert">
+        <h6 class="mb-15" id="header-cert">
             <strong>${_("NOTE")}: </strong>
             Please select the report type and then click Download Report button
         </h6>
