--- a/lms/templates/instructor/instructor_dashboard_2/data_download_2.html
+++ b/lms/templates/instructor/instructor_dashboard_2/data_download_2.html
@@ -4,11 +4,6 @@
 from django.utils.translation import ugettext as _
 from openedx.core.djangolib.markup import HTML, Text
 %>
-
-<!--value-->
-<!--async-report-btn-->
-<!--premissions python-->
-
 <style>
     p {
         line-height: 2;
@@ -38,11 +33,6 @@ from openedx.core.djangolib.markup import HTML, Text
 
 </style>
 
-
-<!--<main id="main" aria-label="Content" tabindex="-1">-->
-
-
-<!--</main>-->
 <div class="data-download-container  action-type-container">
     <ul class="data-download-nav">
 
@@ -285,7 +275,7 @@ from openedx.core.djangolib.markup import HTML, Text
 </div>
 
 %if settings.FEATURES.get('ENABLE_INSTRUCTOR_BACKGROUND_TASKS'):
-<div id='data_download_2' class="running-tasks-container data_download_2 action-type-container">
+<div class="running-tasks-container action-type-container">
     <hr>
     <h3 class="hd hd-3">${_("Pending Tasks")}</h3>
     <div class="running-tasks-section">
