--- a/lms/templates/instructor/instructor_dashboard_2/data_download_2.html
+++ b/lms/templates/instructor/instructor_dashboard_2/data_download_2.html
@@ -4,34 +4,6 @@
 from django.utils.translation import ugettext as _
 from openedx.core.djangolib.markup import HTML, Text
 %>
-<style>
-    p {
-        line-height: 2;
-    }
-
-    .mb-15 {
-        margin-bottom: 20px;
-    }
-    .mb-20 {
-        margin-bottom: 20px;
-    }
-
-    .download-report {
-        margin-left: 10px;
-    }
-
-    .selector {
-        width: 315px;
-        height: 44px
-    }
- .data-download-container .message {
-    border-radius: 1px;
-    padding: 10px 15px;
-    margin-bottom: 20px;
-    font-weight: 600;
- }
-
-</style>
 
 <div class="data-download-container  action-type-container">
     <ul class="data-download-nav">
@@ -107,13 +79,11 @@ from openedx.core.djangolib.markup import HTML, Text
                     %endif
                     %endif
                 </select>
-                <button class="btn-brand download-report" type="button" value="download report">Download
+                <button class="btn-brand download-report ml-10" type="button" value="download report">Download
                     report
                 </button>
             </div>
 
-
-            <!--        <input  id="download-report" type="button" value="download report">-->
         </div>
 
         <div>
@@ -169,7 +139,7 @@ from openedx.core.djangolib.markup import HTML, Text
                 certificates
             </option>
         </select>
-        <button  class="mb-20 btn-brand download-report" type="button" value="download report">Download
+        <button  class="mb-20 btn-brand download-report ml-10" type="button" value="download report">Download
             report
         </button>
         <div>
@@ -220,7 +190,7 @@ from openedx.core.djangolib.markup import HTML, Text
             <option value="false">All Learners</option>
         </select>
 
-        <button class="mb-20 btn-brand grade-report-download" type="button"
+        <button class="mb-20 btn-brand grade-report-download ml-10" type="button"
                 value="download report"
                 data-endpoint="${ section_data['calculate_grades_csv_url'] }">Download Report
         </button>
